<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:title="@string/cat_decoder"
        app:allowDividerAbove="false"
        app:allowDividerBelow="false"
        app:iconSpaceReserved="false">
        <PreferenceCategory
            android:title="@string/cat_scanner_color"
            app:allowDividerAbove="false"
            app:allowDividerBelow="false"
            app:iconSpaceReserved="false">
            <com.jaredrummler.android.colorpicker.ColorPreferenceCompat
                android:defaultValue="@color/white"
                android:key="pref_frame_color"
                android:summary="@string/pref_frame_color_summary"
                android:title="@string/pref_frame_color"
                app:cpv_allowCustom="true"
                app:cpv_colorShape="circle"
                app:cpv_dialogType="preset"
                app:cpv_showAlphaSlider="true"
                app:cpv_showColorShades="true"
                app:cpv_showDialog="true"
                app:iconSpaceReserved="false" />
            <com.jaredrummler.android.colorpicker.ColorPreferenceCompat
                android:defaultValue="@color/black"
                android:key="pref_mask_color"
                android:summary="@string/pref_mask_color_summary"
                android:title="@string/pref_mask_color"
                app:cpv_allowCustom="true"
                app:cpv_colorShape="circle"
                app:cpv_dialogType="preset"
                app:cpv_showAlphaSlider="true"
                app:cpv_showColorShades="true"
                app:cpv_showDialog="true"
                app:iconSpaceReserved="false" />
            <com.jaredrummler.android.colorpicker.ColorPreferenceCompat
                android:defaultValue="@color/green"
                android:key="pref_point_color"
                android:summary="@string/pref_point_color_summary"
                android:title="@string/pref_point_color"
                app:cpv_allowCustom="true"
                app:cpv_colorShape="circle"
                app:cpv_dialogType="preset"
                app:cpv_showAlphaSlider="true"
                app:cpv_showColorShades="true"
                app:cpv_showDialog="true"
                app:iconSpaceReserved="false" />
        </PreferenceCategory>
        <PreferenceCategory
            android:title="@string/cat_scanner_style"
            app:allowDividerAbove="false"
            app:allowDividerBelow="false"
            app:iconSpaceReserved="false">
            <otang.app.scanner.preference.SeekBarPreference
                android:defaultValue="75"
                android:key="pref_corner_size"
                android:max="100"
                android:summary=""
                android:title="@string/pref_corner_size"
                app:iconSpaceReserved="false"
                app:interval="5"
                app:min="0"
                app:units="" />
            <otang.app.scanner.preference.SeekBarPreference
                android:defaultValue="50"
                android:key="pref_corner_radius"
                android:max="100"
                android:summary=""
                android:title="@string/pref_corner_radius"
                app:iconSpaceReserved="false"
                app:interval="5"
                app:min="0"
                app:units="" />
            <otang.app.scanner.preference.SeekBarPreference
                android:defaultValue="10"
                android:key="pref_corner_width"
                android:max="25"
                android:summary=""
                android:title="@string/pref_stroke_width"
                app:iconSpaceReserved="false"
                app:interval="1"
                app:min="5"
                app:units="" />
        </PreferenceCategory>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/cat_encoder"
        app:allowDividerAbove="false"
        app:allowDividerBelow="false"
        app:iconSpaceReserved="false">
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pref_add_logo"
            android:summary="@string/pref_add_logo_summary"
            android:title="@string/pref_add_logo"
            app:iconSpaceReserved="false" />
        <PreferenceCategory
            android:key="pref_logo"
            android:title="@string/cat_logo_style"
            app:allowDividerAbove="false"
            app:allowDividerBelow="false"
            app:iconSpaceReserved="false">
            <ListPreference
                android:defaultValue="0"
                android:entries="@array/logo_shape"
                android:entryValues="@array/logo_shape_value"
                android:key="pref_logo_shape"
                android:summary="%s"
                android:title="@string/pref_shape"
                app:iconSpaceReserved="false" />
            <SwitchPreferenceCompat
                android:defaultValue="false"
                android:key="pref_customs_logo"
                android:summary="@string/pref_custom_logo_summary"
                android:title="@string/pref_custom_logo"
                app:iconSpaceReserved="false" />
            <Preference
                android:enabled="false"
                android:key="pref_custom_logo"
                android:summary="@string/pref_logo_summary"
                android:title="@string/pref_logo"
                app:iconSpaceReserved="false" />
        </PreferenceCategory>
        <PreferenceCategory
            android:title="@string/cat_text"
            app:allowDividerAbove="false"
            app:allowDividerBelow="false"
            app:iconSpaceReserved="false">
            <SwitchPreferenceCompat
                android:defaultValue="true"
                android:key="pref_add_text"
                android:summary="@string/pref_add_text_summary"
                android:title="@string/pref_add_text"
                app:iconSpaceReserved="false" />
        </PreferenceCategory>
        <PreferenceCategory
            android:title="@string/cat_result_style"
            app:allowDividerAbove="false"
            app:allowDividerBelow="false"
            app:iconSpaceReserved="false">
            <otang.app.scanner.preference.SeekBarPreference
                android:defaultValue="2"
                android:key="pref_qr_margin"
                android:max="4"
                android:summary=""
                android:title="@string/pref_margin"
                app:iconSpaceReserved="false"
                app:interval="1"
                app:min="0"
                app:units="" />
            <com.jaredrummler.android.colorpicker.ColorPreferenceCompat
                android:defaultValue="@color/white"
                android:key="pref_bg_color"
                android:summary="@string/pref_background_color_summary"
                android:title="@string/pref_background_color"
                app:cpv_allowCustom="true"
                app:cpv_colorShape="circle"
                app:cpv_dialogType="preset"
                app:cpv_showAlphaSlider="true"
                app:cpv_showColorShades="true"
                app:cpv_showDialog="true"
                app:iconSpaceReserved="false" />
            <com.jaredrummler.android.colorpicker.ColorPreferenceCompat
                android:defaultValue="@color/black"
                android:key="pref_content_color"
                android:summary="@string/pref_foreground_color_summary"
                android:title="@string/pref_foreground_color"
                app:cpv_allowCustom="true"
                app:cpv_colorShape="circle"
                app:cpv_dialogType="preset"
                app:cpv_showAlphaSlider="true"
                app:cpv_showColorShades="true"
                app:cpv_showDialog="true"
                app:iconSpaceReserved="false" />
        </PreferenceCategory>
    </PreferenceCategory>
</PreferenceScreen>