<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/result"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:importantForAccessibility="no"
            android:src="@mipmap/ic_launcher_round" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/app_name"
            android:textAppearance="?attr/textAppearanceHeadlineSmall" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mb_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:onClick="createQR"
        android:text="@string/create" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mb_scan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:onClick="scanQR"
        android:text="@string/scan" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mb_gallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:onClick="scanLocal"
        android:text="@string/from_gallery" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mb_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:onClick="openSettings"
        android:text="@string/settings" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mb_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:onClick="aboutDialog"
        android:text="@string/about" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="bottom"
        android:paddingBottom="25dp"
        android:text="@string/app_version" />

</LinearLayout>